# glk-synth-esqueleto

./: CMakeLists.txt
.github/workflows/: build.yml
src/: PluginProcessor.cpp  PluginProcessor.h
